--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,9 +11,11 @@
     "bootstrap": "^4.6.0",
     "datatables.net-dt": "^1.10.24",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
