--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@coreui/coreui": "^3.4.0",
     "@hookform/resolvers": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -21,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.4.0",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
