--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.4.0",
     "react-icons": "^4.2.0",
