--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,11 +10,13 @@
     "@tinymce/tinymce-react": "^3.12.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.0",
     "datatables.net-dt": "^1.10.24",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
