--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.3.0",
     "datatables.net-dt": "^1.10.24",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^3.0.3",
+    "react-csv": "^2.0.3",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
@@ -34,6 +36,7 @@
     "redux-thunk": "^2.3.0",
     "run": "^1.4.0",
     "web-vitals": "^1.1.1",
+    "xlsx": "^0.17.0",
     "yup": "^0.32.9"
   },
   "scripts": {
